--- a/css/templatemo-upright.css
+++ b/css/templatemo-upright.css
@@ -120,7 +120,7 @@ hr { border-top: 4px solid #CCC; }
 		object-fit: cover;
 		width: 100%;
 		/* min-height: 100%; */
-		height: 100%;
+		height: 500px;
 	}
 }
 
